# KarvyLoop

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  scorecard.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CONCEPTS.md  CONCEPTS.zh-CN.md  DESIGN.md  PHILOSOPHY.md  PHILOSOPHY.zh-CN.md  QUICKSTART.md  QUICKSTART.zh-CN.md  RELAY-SELF-HOST.md  RELAY-SELF-HOST.zh-CN.md  SECURITY-POSTURE.md
karvyloop/: __init__.py  __main__.py  audio_transcribe.py  config_channels.py  config_lang.py  config_relay.py  config_workspace.py  doctor.py  doctor_liveness.py  doctor_log.py  file_extract.py  mcp_client.py  ocr_recognize.py  onboarding.py  onboarding_intake.py  ops_agent.py  receipt_extract.py  receipt_pipeline.py  receipt_solver.py  update.py
karvyloop/a2a/: __init__.py  address.py  audit.py  envelope.py  inbox.py  router.py
karvyloop/adapter/: __init__.py  applier.py  bootstrap.py  planner.py  registry.py  source.py  system_import.py  validator.py
karvyloop/atoms/: __init__.py  _scripted_mock.py  abort.py  consolidate.py  executor.py  freshness.py  loop_state.py  orchestration.py  provisional.py  registry.py  self_create.py  terminal.py  tool_catalog.py
karvyloop/bus/: __init__.py
karvyloop/capability/: __init__.py  broker.py  classifier.py  decision.py  deontic_gate.py  fs_grants.py  pathnorm.py  policy.py  skill_grants.py  token.py
karvyloop/channels/: __init__.py  common.py  email_channel.py  inbox_pipe.py  webhook_channel.py
karvyloop/cli/: __init__.py  _runtime.py  chat.py  doctor_cmd.py  export_cmd.py  import_cmd.py  init.py  intent_pump.py  main.py  main_loop.py  manage.py  prompt_ui.py  pursuit_loop.py  render.py  replay.py  run.py  run_loop.py  update_cmd.py  web_verify_cmd.py  wizard.py
karvyloop/coding/: __init__.py  checker.py  coding_config.py  filestate.py  forge.py  ndjson.py  paradigm_prompt.py  persona.py  prompt.py  render_events.py  session.py  web_verify.py
karvyloop/cognition/: __init__.py  auto_distill.py  belief_store.py  calibration.py  concepts.py  conflict.py  consolidate.py  converge.py  conversation.py  decision_card.py  distill.py  distill_session.py  fence.py  graph.py  ingest.py  insight.py  knowledge_chat.py  memory.py  past_recall.py  provider.py  pursuit.py  pursuit_store.py  recall.py  spread.py  sqlite_trace.py  trace.py  weekly_digest.py
karvyloop/collab/: __init__.py  gate.py  registry.py  room.py
karvyloop/console/: __init__.py  access.py  app.py  belief_tags_tick.py  build_away_bundle.py  capability_install.py  decision_card_wire.py  decision_log.py  decision_stats.py  decision_wire.py  distill_engine.py  entry.py  insight_tick.py  knowledge_tick.py  loop_watchdog.py  mcp_presets.py  mention_fastlane.py  mesh_task_board.py  mesh_tick.py  promotion_tick.py  proposal_handlers.py  proposals.py  pursuit_tick.py  roundtable_engine.py  routes.py  routes_atoms.py  routes_budget.py  routes_butler.py  routes_capability.py  routes_conversations.py  routes_decision_prefs.py  routes_demo.py  routes_domain.py  routes_external.py  routes_files.py  routes_lines.py  routes_memory.py  routes_mesh.py  routes_models.py  routes_onboarding.py  (+20 more)
karvyloop/context/: __init__.py  autocompact.py  boundary.py  budget.py  microcompact.py  pipeline.py  relevance.py  truncate.py
karvyloop/crystallize/: __init__.py  atom_critic.py  auto_suggest.py  cluster.py  crystallize.py  curve.py  decision_pref.py  evict.py  improve.py  lessons.py  observe.py  recall.py  result_classifier.py  revision.py  signature.py  skill_index.py  sqlite_store.py  store.py  taste_eval.py  trace_eval.py  verify.py
karvyloop/domain/: __init__.py  deontic.py  lifecycle.py  protocols.py  registry.py  skill_conflict.py  store.py  templates.py  value.py
karvyloop/domains/: __init__.py
karvyloop/ethos/: __init__.py  auditor.py  bootstrapper.py  conformance.py  severity.py
karvyloop/external_runtime/: __init__.py  addressing.py  bridge.py  citizen.py  connector.py  probe.py  recipe.py  redact.py  store.py
karvyloop/gateway/: __init__.py  client.py  config_models.py  cost.py  events.py  presets.py  readiness.py  reasoning.py  registry.py  resolve.py  structured.py  system.py
karvyloop/i18n/: __init__.py  _strings.py
karvyloop/instance/: __init__.py  context.py  health.py  scheduler.py
karvyloop/karvy/: __init__.py  ambient.py  atoms.py  butler_lesson.py  capability.py  cocreation.py  core.py  courier.py  external_collab.py  fuzzy_dispatch.py  global_karvy.py  h2a.py  manual_run_counter.py  observer.py  proactive.py  proposal_registry.py  pursuit_triage.py  residents.py  role_evals.py  roundtable.py  schedule_parser.py  scheduler.py  self_knowledge.py  silence.py  slash.py  tools.py  workflow.py  workflow_runs.py  workflow_store.py
karvyloop/l0/: __init__.py  ack_tracker.py  channel_auth.py  fallback.py  observer_aggregator.py  world.py
karvyloop/llm/: __init__.py  config.py  (+7 more)
redteam/: README.md  fence_provider.py  promptfooconfig.yaml
scripts/: install.ps1  install.sh  relay-setup.sh  uninstall.ps1  uninstall.sh
tests/: _scan.py  conftest.py  test_a2a.py  test_a2a_tier2.py  test_adapter.py  test_agent_import_decompose.py  test_agent_import_system.py  test_ambient_recall.py  test_anthropic_adapter_auth.py  test_atom_consolidate.py  test_atom_critic.py  test_atom_registry.py  test_atom_tool_catalog.py  test_atoms_executor.py  test_audio_transcribe.py  test_auto_distill.py  test_away_bundle.py  test_away_page.py  test_b5_trace_instrumentation.py  test_belief_consolidate.py  test_belief_store.py  test_belief_tags_tick.py  test_butler_lesson.py  test_capability.py  test_capability_install.py  test_capability_overview.py  test_capability_unlocks.py  test_capability_web_mcp.py  test_card_lang.py  test_checker.py  test_cli.py  test_cli_console.py  test_cli_i18n.py  test_cli_intent_pump.py  test_cli_manage.py  test_cli_manage_mutate.py  test_cli_run_loop.py  test_closed_loop_audit_fixes.py  test_cocreation.py  test_coding_capability.py  (+326 more)
(+393 files in other folders)
