[project]
name = "karvyloop"
dynamic = ["version"]                 # 单一版本源 = karvyloop/__init__.py:__version__(见 [tool.setuptools.dynamic])
description = "KarvyLoop — 本地优先、AI-Native 的用户态 Agent 运行时"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "textual>=0.50",          # MIT, M3 批 3 workbench 终端 UI 主线
    "textual-serve>=0.5",     # MIT, M3 批 3c `--serve` 模式
    "fastapi>=0.115",         # 批 8.5-C:本地 HTML 控制台 后端(MIT,通用基建)
    "uvicorn[standard]>=0.30",  # 批 8.5-C:ASGI server + WS + 静态文件
    "croniter>=2.0",          # 定时任务:完整 cron 表达式解析/算 next_run(MIT,通用基建必借,不手搓)
]

[project.optional-dependencies]
# 网页产物运行时验收门(karvyloop verify-web):重依赖(要下浏览器),可选;没装则优雅降级到只验语法。
web = [
    "playwright>=1.40",   # 装后还需 `playwright install chromium`
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",   # HTTP mock:gateway adapter 的请求体形状/SSE 测试用
    "psutil>=5.9",   # test_mcp_client.py 验子进程清理(AC6;mcp 组需另装 `pip install mcp`)
]

[project.scripts]
karvyloop = "karvyloop.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "karvyloop.__version__"}   # AST-read,不导入包;改版本只改 __init__.py 一处

[tool.setuptools.packages.find]
include = ["karvyloop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
