[project]
name = "karvyloop"
dynamic = ["version"]                 # 单一版本源 = karvyloop/__init__.py:__version__(见 [tool.setuptools.dynamic])
description = "KarvyLoop — a local-first, loop-native AI agent runtime: agents that run your work, verify themselves, and compound into skills that are yours — while you stay the one who decides"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "textual>=0.50",          # MIT, M3 批 3 workbench 终端 UI 主线
    "textual-serve>=0.5",     # MIT, M3 批 3c `--serve` 模式
    "fastapi>=0.115",         # 批 8.5-C:本地 HTML 控制台 后端(MIT,通用基建)
    "uvicorn[standard]>=0.30",  # 批 8.5-C:ASGI server + WS + 静态文件
    "croniter>=2.0",          # 定时任务:完整 cron 表达式解析/算 next_run(MIT,通用基建必借,不手搓)
]

[project.optional-dependencies]
# 全部可选依赖**缺了也能跑**——优雅降级,绝不报错(见 README「Optional features」表)。
# 网页产物运行时验收门(karvyloop verify-web):重依赖(要下浏览器);没装则降级到只验语法。
web = [
    "playwright>=1.40",   # 装后还需 `playwright install chromium`
]
# 接 MCP server(它的工具注入给每个 agent);没装 → 用到时友好报错"pip install karvyloop[mcp]"。
mcp = [
    "mcp>=1.9",           # ≥1.9:remote server(streamable HTTP)要求;stdio 另需 PATH 有 uvx(`pip install uv`)
]
# 跨进程 A2A transport(多进程/多机协作);没装 → 自动降级到 in-process(单进程够用)。
redis = [
    "redis>=5.0",
]
# 附件真解析(files 面板预览 + read_file 工具):PDF/Word(.docx)/Excel(.xlsx)→ 文本,
# 与 CSV 走同一条预览/截断/交办产线(karvyloop/file_extract.py)。通用基建必借,不自造解析器。
# 没装 → 预览/读取时诚实提示 `pip install "karvyloop[files]"`,绝不吐二进制垃圾、绝不崩。
files = [
    "pypdf>=4.0",         # BSD;纯 Python PDF 文本提取
    "python-docx>=1.1",   # MIT;Word .docx(zip 容器)段落+表格
    "openpyxl>=3.1",      # MIT;Excel .xlsx(zip 容器)按行铺成 CSV 形状
]
# 本地音频转写(ASR):mp3/wav/m4a → 文字稿,进附件解析同一条产线(audio_transcribe.py),
# 转写后的文字走 meeting-notes 等既有通道。选型 docs/64:faster-whisper(MIT,CTranslate2,
# CPU int8 可跑,自带 PyAV 解码不要求系统 ffmpeg)。**模型不随包**:首次使用时从 HF 下载
# (默认 small ≈ 480MB,KARVYLOOP_ASR_MODEL 可换)。没装 → 明确提示,绝不假装转写。
asr = [
    "faster-whisper>=1.1",
]
# 图片/扫描票据 OCR(报销识别的前置 OCR 工具;ocr_recognize.py)。选型 PaddleOCR/PP-OCRv5
# (Apache-2.0,CJK 最强,on-device 票据不出机器;2026-07 世界雷达裁,docs 待补)——首次用下模型,
# 不塞 wheel。没装 → 诚实提示 `pip install "karvyloop[ocr]"`,图片走贴文字/视觉模型兜底,绝不崩。
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "pillow>=10.0",
]
# Windows Tier 3 沙箱(RestrictedToken 写隔离 + Job 资源上限)——**零额外依赖**:
# 全用 stdlib ctypes 手绑 Win32,不引 pywin32(避免给非 Windows 用户加基础重量)。
# 此 extra 故意留空,只作显式声明:装不装都一样,Windows 上探测到即启用 Tier 3,
# 否则降 Tier 4(DegradedWindowsSandbox)。若未来需重量级 Win32 封装再往这里加。
winsandbox = []
# Karvy 信使 relay 的 E2E 加密(X25519 + ChaCha20-Poly1305,docs/43 第二级「信使不拆信」);
# 没装 → `karvyloop console --relay` / `relay-pair` 诚实报 "pip install karvyloop[relay]"。
# relay 服务本体(relay-serve)只用 FastAPI/uvicorn(基础依赖),不需要这个 extra。
relay = [
    "cryptography>=42",
]
# 测试/开发依赖。**装了 `.[dev]` 后 `pytest --co` 必须 0 collection error**——这是开源可信度地板:
# respx / psutil 是仅有的两个「测试模块顶层直接 import」的非核心依赖(3 + 1 个测试文件),
# 缺它们 = 干净 clone 后一堆 collection error(朋友的「81 error」根因正是他只跑了 `pip install -e .`
# 没带 `[dev]`)。其余真·可选依赖(mcp/playwright/redis/cryptography)测试内都用 pytest.importorskip
# / lazy-import 优雅降级,没装则整模块自跳,不报 collection error。CI 装 `.[dev]` 即全绿。
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",   # HTTP mock:gateway adapter 的请求体形状/SSE 测试用(test_web_tools/multimodal/openai_completions 顶层 import)
    "psutil>=5.9",   # test_mcp_client.py 验子进程清理(AC6;顶层 import;mcp 组需另装 `pip install mcp`)
    "ruff>=0.6",     # lint 门(仅 `ruff check`,不 --fix);见 [tool.ruff] + .github/workflows/ci.yml
]

[project.scripts]
karvyloop = "karvyloop.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "karvyloop.__version__"}   # AST-read,不导入包;改版本只改 __init__.py 一处

[tool.setuptools.packages.find]
include = ["karvyloop*"]
# sample_data 是纯数据目录,**不许**被 namespace-package 自动发现(find 默认 namespaces=true):
# 否则脏树里的游离 *.py(真模型压测写过分析脚本,W1 实捕)会被当"模块"打进 wheel,
# 绕过下面 package-data 只收 *.csv 的收窄。演示 CSV 走 package-data 照常随包。
exclude = ["karvyloop.sample_data*", "karvyloop.demo_instances*"]  # 纯数据目录:不当 namespace 包发现,随 package-data 走

# 非 .py 运行时资产必须随包发布,否则 pip/Nuitka 安装后这些文件消失(源码树里在、装出来没)——
# 独立对抗验收实测:不声明则 wheel 只含 .py,system_skills/ 与 console/static/ 全丢,
# data-analyst 系统技能在装好的部署里静默蒸发。
[tool.setuptools.package-data]
karvyloop = [
    "system_skills/**/*",      # 包内只读系统技能/atom 模板(reset 动不到的不可删区)
    "sample_data/**/*.csv",    # 包内只读样例数据(「第一个 10 分钟」旅程的演示 CSV)。
                               # 只收 *.csv:目录曾被真模型压测写进游离分析脚本(W1),
                               # 脏树 build 时宽 glob 会把垃圾一并打进 wheel。
    "system_contracts/**/*",   # 包内只读系统契约(尽责下属默认协作契约;同 reset 动不到)
    "system_residents/**/*",   # 包内只读原住民镜像(docs/60:灵魂文件正文 + resident.json 清单)
    "console/static/**/*",     # 本地 HTML 控制台前端(html/js/css/vendor/assets)
    "demo_instances/**/*",     # 随包只读演示实例(「小林/Lin」满级号,真机制产物;console 只读浏览)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# 安全套件标记:给散落各处的攻防测试打 `@pytest.mark.security`,`pytest -m security`
# 一键跑全部安全对抗测试(SSRF/deontic 绕闸/沙箱逃逸/relay 攻防/MCP 注入/敏感地板/
# 凭证泄露…)。清单与向量对照见 tests/security/README.md。
markers = [
    "security: 安全攻防测试(deontic gate / sandbox escape / relay / MCP injection / SSRF / fs sensitive floor / credential leak)",
]

# ---------------------------------------------------------------------------
# ruff — lint 门(dev-time infra,不进运行时,不违背「少脚手架多信模型」铁律)。
# 立门原则:先把门立起来让**现有代码全过**(0 违规),别一上来 strict 刷全仓红 / 别 --fix 大改。
# `ruff check .` 现状 = All checks passed。以下 ignore 全是「需要改代码才能消、留作后续渐进收紧」
# 的存量债,不是「永久放行」——每一条都标了为什么现在忽略。收紧路线见 docs/58 §2 ②。
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
# line-length 仅供未来 `ruff format` 参考;E501 本身在下面 ignore(见理由),不作门。
line-length = 120
extend-exclude = ["build", "_local", "*.egg-info"]

[tool.ruff.lint]
# 业界基线三组:E(pycodestyle 错)、F(pyflakes 逻辑)、W(pycodestyle 警)。
select = ["E", "F", "W"]
# 存量债忽略清单(装 ruff 后 `ruff check .` 实测:去掉任一条都会亮现有代码,需改码才能消):
ignore = [
    "E501",  # line-too-long:5388 处。仓内大量中英双语行内注释,强行折行=改动数千行(动码);
             #   line-length 交给未来一次性 `ruff format`,不作 lint 门。
    "E402",  # module-import-not-at-top:测试里 pytest.importorskip / sys.path 垫底后再 import 是**有意**
             #   (顶部已有 `# noqa: E402`),不是错。
    "E401",  # multiple-imports-on-one-line:19 处风格,消它要改码。
    "E701", "E702",  # 多语句同行(冒号/分号,~126 处):风格,消它要改码。
    "E731",  # lambda 赋值:7 处,风格。
    "E741",  # ambiguous 变量名(l/I/O):16 处,风格。
    "F401",  # unused-import:326 处,多为 __init__ re-export + TYPE_CHECKING 转发;--fix 会误删转发导出,
             #   留作后续人工/format 阶段清(见 per-file-ignores 已单独放行 __init__.py)。
    "F811",  # redefined-while-unused:5 处,消它要改码。
    "F841",  # unused-variable:28 处,消它要改码。
    "F821",  # undefined-name:9 处**全是** `Optional["GovConfig"]` 这类**前向引用字符串注解**
             #   (真类型在 TYPE_CHECKING 下导),是 ruff 静态误报,不是真 bug。
    "F541",  # f-string-missing-placeholders:19 处,消它要改码。
    "W292",  # no-newline-at-end-of-file:23 文件。纯可 --fix,但本轮「立门不 --fix」纪律下先放行,
             #   下次 `ruff format`/`ruff check --fix` 一次性收(安全无逻辑改动)。
]
# 仍然**生效**并守着真 bug 的:E9(语法/运行期错)、F63/F7(坏断言/坏语法)、F82 逻辑、
# W605(无效正则转义)等——这些现状本就 0 违规,门抓的是**新引入**的这类问题(防回归)。

[tool.ruff.lint.per-file-ignores]
# __init__.py 的「导入即为对外 re-export」本就不算 unused。
"__init__.py" = ["F401"]

